--- a/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
+++ b/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
@@ -63,9 +63,9 @@
                   <Font name="Arial Bold" size="20.0" />
                </font>
             </Label>
-            <ScrollPane prefHeight="413.0" prefWidth="350.0">
+            <ScrollPane fitToWidth="true" VBox.vgrow="ALWAYS">
                <content>
-                  <VBox prefHeight="411.0" prefWidth="328.0" />
+                  <VBox fx:id="containerPromozioniAttive" alignment="CENTER" />
                </content>
             </ScrollPane>
          </children>
