--- a/src/main/resources/Fxml/Client/ClientMenuView/ContactUs.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/ContactUs.fxml
@@ -1,52 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.ContactUsController">
-    <left>
-        <Pane prefHeight="1080.0" prefWidth="0.0" BorderPane.alignment="CENTER">
-            <children>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-            </children>
-        </Pane>
-    </left>
-    <center>
-        <AnchorPane BorderPane.alignment="CENTER">
-            <children>
-                <VBox layoutX="12.0" layoutY="20.0" prefHeight="300.0" styleClass="pane_offerte_dashboard"  AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="358.0" AnchorPane.topAnchor="20.0">
-                    <children>
-                        <HBox prefHeight="95.0" prefWidth="1534.0" styleClass="testo_offerte_dashboard" >
-                            <children>
-                                <Label fx:id="labelNomeUtenteSaluto" prefHeight="98.0" text="Ciao, Matteo">
-                                    <font>
-                                        <Font name="Arial Bold" size="30.0" />
-                                    </font>
-                                    <HBox.margin>
-                                        <Insets left="20.0" />
-                                    </HBox.margin>
-                                </Label>
-                                <Separator orientation="VERTICAL" prefHeight="200.0">
-                                    <HBox.margin>
-                                        <Insets bottom="15.0" left="20.0" right="20.0" top="15.0" />
-                                    </HBox.margin>
-                                </Separator>
-                                <Label prefHeight="98.0" text="Ecco alcune offerte riservate per te">
-                                    <font>
-                                        <Font name="Arial Bold" size="30.0" />
-                                    </font>
-                                </Label>
-                            </children>
-                        </HBox>
-                    </children>
-                </VBox>
-            </children>
-        </AnchorPane>
-    </center>
-    <styleClass>
-        <String fx:value="sfondo" />
-        <String fx:value="testo_offerte_dashboard" />
-    </styleClass>
+
+<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.ContactUsController">
+   <top>
+      <Label text="Label" BorderPane.alignment="CENTER" />
+   </top>
+   <center>
+      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
+   </center>
+   <bottom>
+      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <VBox prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <Label text="Indirizzo e-mail:" />
+                  <Label text="Numero di telefono:" />
+                  <Label text="Instagram" />
+                  <Label text="facebook" />
+               </children>
+            </VBox>
+            <VBox prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <Label text="Indirizzo" />
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+   </bottom>
 </BorderPane>
