--- a/src/main/resources/Fxml/Client/ClientMenuView/ContactUs.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/ContactUs.fxml
@@ -1,36 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.web.WebView?>
+<SplitPane dividerPositions="0.5" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.ContactUsController">
 
-<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.ContactUsController">
-   <top>
-      <Label text="Label" BorderPane.alignment="CENTER" />
-   </top>
-   <center>
-      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
-   </center>
-   <bottom>
-      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <VBox prefHeight="200.0" prefWidth="100.0">
-               <children>
-                  <Label text="Indirizzo e-mail:" />
-                  <Label text="Numero di telefono:" />
-                  <Label text="Instagram" />
-                  <Label text="facebook" />
-               </children>
-            </VBox>
-            <VBox prefHeight="200.0" prefWidth="100.0">
-               <children>
-                  <Label text="Indirizzo" />
-               </children>
-            </VBox>
-         </children>
-      </HBox>
-   </bottom>
-</BorderPane>
+    <items>
+        <!-- Pannello sinistro -->
+        <StackPane>
+            <children>
+                <VBox alignment="CENTER" spacing="20" styleClass="vbox" stylesheets="@../../../Styles/contactUsStyle.css" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="20">
+                    <Label styleClass="label-titolo" stylesheets="@../../../Styles/contactUsStyle.css" text="I nostri social" />
+                    <Button styleClass="icone-socials" stylesheets="@../../../Styles/contactUsStyle.css" text="Instagram">
+                      <graphic>
+                         <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                     <Image url="@../../../Images/icona_ig.png" />
+                                 </image>
+                         </ImageView>
+                      </graphic>
+                    </Button>
+                    <Button styleClass="icone-socials" stylesheets="@../../../Styles/contactUsStyle.css" text="Facebook">
+                  <graphic>
+                     <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                          <image>
+                              <Image url="@../../../Images/icona_fb.png" />
+                          </image>
+                     </ImageView>
+                  </graphic></Button>
+                </VBox>
+            </children>
+        </StackPane>
+
+        <!-- Pannello destro -->
+        <StackPane>
+            <children>
+                <VBox alignment="CENTER" spacing="20" styleClass="vbox" stylesheets="@../../../Styles/contactUsStyle.css" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="20">
+                    <Label styleClass="label-titolo" stylesheets="@../../../Styles/contactUsStyle.css" text="I nostri contatti" />
+                    <Label fx:id="labelEmail" styleClass="label-contenuto" stylesheets="@../../../Styles/contactUsStyle.css" text="Email: info@wepower.it" />
+                    <Label fx:id="labelTelefono" styleClass="label-contenuto" stylesheets="@../../../Styles/contactUsStyle.css" text="Telefono: 123-456-7890" />
+                    <Label fx:id="labelIndirizzo" styleClass="label-contenuto" stylesheets="@../../../Styles/contactUsStyle.css" text="Sede: Via Roma 1, Milano" />
+                    <Label fx:id="labelOrariSegreteria" styleClass="label-contenuto" stylesheets="@../../../Styles/contactUsStyle.css" text="Orari segreteria: 9-18" />
+
+                    <WebView fx:id="googleMapsView" prefHeight="200" prefWidth="200"></WebView>
+                </VBox>
+            </children>
+        </StackPane>
+    </items>
+</SplitPane>
