Aggiunta funzionalità visualizzare certificati medici in attesa di approvazione. Aggiunta funzionalità accettazione/rifiuto di un certificato medico

--- a/src/main/resources/Fxml/Admin/AdminMenuView/CertificatiAdmin.fxml
+++ b/src/main/resources/Fxml/Admin/AdminMenuView/CertificatiAdmin.fxml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.BorderPane?>
 
-<BorderPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            prefHeight="400.0" prefWidth="600.0">
 
+<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.TabellaCertificatiAdminController">
+   <center>
+      <ScrollPane fitToHeight="true" fitToWidth="true" BorderPane.alignment="CENTER">
+         <content>
+            <TableView fx:id="tabellaCertificati">
+              <columns>
+                <TableColumn fx:id="colID" prefWidth="75.0" text="ID" />
+                <TableColumn fx:id="colNome" prefWidth="75.0" text="Nome" />
+                  <TableColumn fx:id="colCognome" prefWidth="75.0" text="Cognome" />
+                  <TableColumn fx:id="colDataCaricamento" prefWidth="75.0" text="Data caricamento" />
+                  <TableColumn fx:id="colVisualizza" prefWidth="75.0" text="Visualizza certificato" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+         </content>
+      </ScrollPane>
+   </center>
 </BorderPane>
