--- a/src/main/resources/Fxml/Client/ClientMenuView/SchermataCreazioneScheda.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/SchermataCreazioneScheda.fxml
@@ -5,13 +5,14 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.layout.AnchorPane?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.SchermataCreazioneSchedaController">
+<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.SchermataCreazioneSchedaController">
+   <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label text="Nessuna scheda associata all'utente. Inizia a crearne una o richiedila all'admin" />
-            <Button fx:id="createScheda" mnemonicParsing="false" text="Crea la tua scheda" />
-            <Button fx:id="askScheda" mnemonicParsing="false" text="Chiedi che te ne venga assegnata una" />
-         </children>
+       <children>
+           <Label text="Nessuna scheda associata all'utente. Inizia a crearne una o richiedila all'admin" />
+           <Button fx:id="createScheda" mnemonicParsing="false" text="Crea la tua scheda" />
+           <Button fx:id="askScheda" mnemonicParsing="false" text="Chiedi che te ne venga assegnata una" />
+       </children>
       </VBox>
-</AnchorPane>
+   </center>
+</BorderPane>
