Prima implementazione richiesta scheda all'admin

--- a/src/main/resources/Fxml/Client/ClientMenuView/Scheda.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/Scheda.fxml
@@ -23,7 +23,7 @@
 
     <!-- Divisione orizzontale responsive -->
     <center>
-        <SplitPane dividerPositions="0.5">
+        <SplitPane dividerPositions="0.5" fx:id="splitPane">
             <items>
                 <ScrollPane>
                     <content>
