--- a/src/main/resources/Fxml/Admin/ContainerAdminView.fxml
+++ b/src/main/resources/Fxml/Admin/ContainerAdminView.fxml
@@ -1,28 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 
-<?import javafx.geometry.Insets?>
-<BorderPane
-        minHeight="1000"
-        minWidth="1200"
-        stylesheets="@../../Styles/DashboardAdmin.css"
-        xmlns="http://javafx.com/javafx/23.0.1"
-        xmlns:fx="http://javafx.com/fxml/1"
-        fx:controller="com.wepower.wepower.Controllers.Admin.AdminController"
-        fx:id="contenitore_admin_view">
 
-    <top>
-        <fx:include source="MenuAdmin.fxml" />
-    </top>
-   <center>
-       <VBox>
+<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.AdminController" fx:id="contenitore_admin_view" stylesheets="@../../Styles/DashboardAdmin.css">
 
-           <fx:include source="DashboardAdmin.fxml" />
-       </VBox>
-   </center>
+<top>
+    <fx:include source="MenuAdmin.fxml"/>
+</top>
+
+<center>
+    <fx:include source="DashboardAdmin.fxml"/>
+</center>
 
 </BorderPane>
