--- a/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
+++ b/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
@@ -14,150 +14,126 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.AdminDashboardController">
-   <right>
-      <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
-         <children>
-            <Label text="Percentuale iscritti per genere:">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-            <PieChart />
-         </children>
-         <padding>
-            <Insets top="20.0" />
-         </padding>
-      </VBox>
-   </right>
    <center>
-      <VBox BorderPane.alignment="CENTER">
-         <children>
-            <Label text="Andamento abbonamenti attivi">
-               <font>
-                  <Font name="System Bold" size="22.0" />
-               </font>
-            </Label>
-            <ComboBox />
-            <BarChart>
-               <xAxis>
-                  <CategoryAxis side="BOTTOM" />
-               </xAxis>
-               <yAxis>
-                  <NumberAxis side="LEFT" />
-               </yAxis>
-            </BarChart>
-         </children>
-         <BorderPane.margin>
-            <Insets />
-         </BorderPane.margin>
-         <padding>
-            <Insets top="20.0" />
-         </padding>
-      </VBox>
+      <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="AS_NEEDED">
+         <content>
+            <VBox fillWidth="true" spacing="25.0">
+               <children>
+                  <HBox alignment="TOP_CENTER" spacing="20.0">
+                     <children>
+                        <VBox alignment="TOP_CENTER" style="-fx-background-color: orange; -fx-padding: 20;" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label text="Totale abbonamenti attivi:">
+                                 <font>
+                                    <Font name="Arial Bold" size="20.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="labelTotaleAbbonamenti" text="3737">
+                                 <font>
+                                    <Font size="48.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
+                        <VBox alignment="TOP_CENTER" style="-fx-background-color: orange; -fx-padding: 20;" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label text="Richieste schede in attesa:">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="labelRichiesteSchede" text="3">
+                                 <font>
+                                    <Font size="48.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
+                        <VBox alignment="TOP_CENTER" style="-fx-background-color: orange; -fx-padding: 20;" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label text="Certificati in attesa:">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="labelCertificatiAttesa" text="2">
+                                 <font>
+                                    <Font size="48.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
+                        <VBox alignment="TOP_CENTER" style="-fx-background-color: orange; -fx-padding: 20;" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label text="Totale prenotati oggi:">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="labelPrenotatiOggi" text="87">
+                                 <font>
+                                    <Font size="48.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox alignment="TOP_CENTER" spacing="20.0" VBox.vgrow="ALWAYS">
+                     <children>
+                        <ScrollPane fitToHeight="true" fitToWidth="true" minWidth="200.0" HBox.hgrow="SOMETIMES">
+                           <content>
+                              <VBox prefWidth="250.0">
+                                 <children>
+                                    <Label text="Promozioni attive:">
+                                       <font>
+                                          <Font size="20.0" />
+                                       </font>
+                                    </Label>
+                                    <VBox fx:id="containerPromozioniAttive" />
+                                 </children>
+                              </VBox>
+                           </content>
+                        </ScrollPane>
+                        <VBox alignment="TOP_CENTER" minWidth="0.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label text="Andamento abbonamenti attivi">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Label>
+                              <ComboBox fx:id="annoGrafico" prefWidth="150.0" />
+                              <BarChart VBox.vgrow="ALWAYS">
+                                <xAxis>
+                                  <CategoryAxis side="BOTTOM" />
+                                </xAxis>
+                                <yAxis>
+                                  <NumberAxis side="LEFT" />
+                                </yAxis>
+                              </BarChart>
+                           </children>
+                        </VBox>
+                        <VBox minWidth="200.0" HBox.hgrow="NEVER">
+                           <children>
+                              <Label text="Percentuale iscritti per genere:">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Label>
+                              <PieChart VBox.vgrow="ALWAYS" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+               </children>
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </padding>
+            </VBox>
+         </content>
+      </ScrollPane>
    </center>
-   <left>
-      <VBox BorderPane.alignment="CENTER">
-         <children>
-            <Label text="Promozioni attive:">
-               <font>
-                  <Font name="Arial Bold" size="20.0" />
-               </font>
-            </Label>
-            <ScrollPane fitToWidth="true" VBox.vgrow="ALWAYS">
-               <content>
-                  <VBox fx:id="containerPromozioniAttive" alignment="CENTER" />
-               </content>
-            </ScrollPane>
-         </children>
-         <padding>
-            <Insets right="20.0" top="30.0" />
-         </padding>
-      </VBox>
-   </left>
-   <top>
-      <HBox alignment="TOP_CENTER" spacing="20.0" BorderPane.alignment="CENTER">
-         <children>
-            <VBox alignment="TOP_CENTER" style="-fx-background-color: orange;">
-               <children>
-                  <Label text="Totale Abbonamenti attivi:">
-                     <font>
-                        <Font name="Arial Bold" size="30.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="labelTotaleAbbonamenti" text="1287">
-                     <font>
-                        <Font name="Arial Bold" size="56.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets top="30.0" />
-                     </VBox.margin>
-                  </Label>
-               </children>
-               <padding>
-                  <Insets top="20.0" />
-               </padding>
-            </VBox>
-            <VBox alignment="TOP_CENTER" style="-fx-background-color: orange;">
-               <children>
-                  <Label text="Richieste schede in attesa:">
-                     <font>
-                        <Font name="Arial Bold" size="30.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="labelRichiesteSchede" text="3">
-                     <font>
-                        <Font name="Arial Bold" size="56.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets top="30.0" />
-                     </VBox.margin>
-                  </Label>
-               </children>
-               <padding>
-                  <Insets top="20.0" />
-               </padding>
-            </VBox>
-            <VBox alignment="TOP_CENTER" style="-fx-background-color: orange;">
-               <children>
-                  <Label text="Certificati in attesa:" textAlignment="CENTER">
-                     <font>
-                        <Font name="Arial Bold" size="30.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="labelCertificatiAttesa" text="4">
-                     <font>
-                        <Font name="Arial Bold" size="56.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets top="30.0" />
-                     </VBox.margin>
-                  </Label>
-               </children>
-               <padding>
-                  <Insets top="20.0" />
-               </padding>
-            </VBox>
-            <VBox alignment="TOP_CENTER" style="-fx-background-color: orange;">
-               <children>
-                  <Label text="Totale prenotati oggi:">
-                     <font>
-                        <Font name="Arial Bold" size="30.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="labelPrenotatiOggi" text="36">
-                     <font>
-                        <Font name="Arial Bold" size="56.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets top="30.0" />
-                     </VBox.margin>
-                  </Label>
-               </children>
-               <padding>
-                  <Insets top="20.0" />
-               </padding>
-            </VBox>
-         </children>
-      </HBox>
-   </top>
 </BorderPane>
